example/class/class-10.nbl
var FakeClass = "This is not a class";

class Class : FakeClass {} // error
